<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_profile">

        <item
            android:id="@+id/renameProfile"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/rename_profile"
            tools:ignore="AppCompatResource" />

        <item
            android:id="@+id/deleteProfile"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/delete_profile"
            tools:ignore="AppCompatResource" />

    </group>

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/other"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"
        tools:ignore="AppCompatResource" />

</menu>